fix name bug? add it to workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,23 @@
 {
-  "cSpell.words": ["ssylka"]
+  "cSpell.words": [
+    "апартаменты",
+    "гостинице",
+    "доме",
+    "жилье",
+    "квартире",
+    "квартиру",
+    "Киев",
+    "комнату",
+    "место",
+    "мотеле",
+    "номер",
+    "отеле",
+    "Переяслав",
+    "посуточно",
+    "Хмелницкий",
+    "хостеле",
+    "Logoclass",
+    "ssylka",
+    "ulka"
+  ]
 }
